update to include security configuration